# checklist-plus

./: README.md  pyproject.toml  setup.py
checklist_plus/: __init__.py  editor.py  perturb.py  text_generation.py
checklist_plus/config/text_generation/: default_generation.yaml
checklist_plus/data/: names.json
checklist_plus/text_generation/: __init__.py  llm.py  masked_lm.py  models.py
docs/source/: conf.py
notebooks/: Testing.ipynb
notebooks/tutorials/: 1. Generating data.ipynb  3. Test types, expectation functions, running tests.ipynb  4. The CheckList process.ipynb
