# pyproject.toml
[project]
name = "checklist_plus"
version = "1.0.0"
description = "LLM-Enhanced CheckList: AI-Powered Behavioral Testing of NLP Models"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<=3.12"
license = { text = "MIT" }
authors = [
    { name = "Chingis Owana", email = "your.email@example.com" },
    { name = "Marco Tulio Ribeiro (Original CheckList)" }
]
keywords = ["nlp", "testing", "llm", "behavioral-testing", "model-evaluation", "ai", "checklist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Original CheckList dependencies
    "numpy>=1.18",
    "spacy>=2.2",
    "munch>=2.5",
    "dill>=0.3.1",
    "jupyter>=1.0",
    "ipywidgets>=7.5",
    "transformers>=2.8",
    "patternfork-nosql",
    "pycountry",
    # New LLM dependencies
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.0.0"
]

[project.optional-dependencies]
huggingface = [
    "torch>=1.9.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "transformers[torch]>=4.21.0"
]
visualization = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "seaborn>=0.11.0",
    "matplotlib>=3.5.0"
]
multimodal = [
    "pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "requests>=2.25.0"
]
dev = [
    "pytest>=7.0.0", 
    "pre-commit==3.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/checklist_plus"
Documentation = "https://checklist-plus.readthedocs.io/"
Repository = "https://github.com/yourusername/checklist_plus.git"
"Bug Tracker" = "https://github.com/yourusername/checklist_plus/issues"
"Original CheckList" = "https://github.com/marcotcr/checklist"

[project.scripts]
"checklist-plus" = "checklist_plus.cli:main"

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["checklist_plus"]
include-package-data = true

[tool.setuptools.package-data]
"checklist_plus" = [
    "data/*",
    "data/lexicons/*",
    "viewer/static/*",
    "llm/prompts/*",
    "config/*"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true